Fixed news text align to be left on mobile.

--- a/assets/css/4-sections/_startscreen.sass
+++ b/assets/css/4-sections/_startscreen.sass
@@ -201,6 +201,8 @@ section.startscreen
     bottom: 0
     top: 0
     width: 100%
+    text-align: left
+    padding: 0
 
 
     .toggle-news
